--- a/footer/footer.html
+++ b/footer/footer.html
@@ -1,11 +1,20 @@
 <footer>
+    <hr>
     <div class="row">
-        <div class="col-md-8 col-md-offset-2">
-            <h6>MPCR Selfie</h6>
-            <span>Phone: 443.371.1815</span>
-            <span>Email: marysselfiestation@gmail.com</span>
-            <span>Facebook: <a href="https://www.facebook.com/MPCRSelfie/">MPCR Selfie</a></span>
-            <span>Instagram: <a href="https://www.instagram.com/mpcrselfie/">@MPCRSelfie</a></span>
+        <div class="col-md-8 col-md-offset-2 footer">
+            <h6>contact info</h6>
+            <span id="phoneNumber">
+                <i class="fa fa-phone" aria-hidden="true"></i>
+                    Phone: 443.371.1815 |</span>
+            <span id="email">
+                <i class="fa fa-envelope" aria-hidden="true"></i>
+                    Email: marysselfiestation@gmail.com</span><br>
+            <span id="facebook">
+                <i class="fa fa-facebook-official" aria-hidden="true"></i>
+                    <a href="https://www.facebook.com/MPCRSelfie/">Facebook |</a></span>
+            <span id="instagram">
+                <i class="fa fa-instagram" aria-hidden="true"></i>
+                    <a href="https://www.instagram.com/mpcrselfie/">Instagram</a></span>
         </div>
     </div>
 </footer>
