--- a/packages/packages.html
+++ b/packages/packages.html
@@ -1,7 +1,7 @@
-<div class="container content">
+<div class="container cards-content">
     <div class="row">
         <!-- Pricing -->
-        <div class="col-md-3 col-md-offset-3">
+        <div class="col-md-5 col-md-offset-1">
             <div class="pricing hover-effect">
                 <div class="pricing-head">
                     <h3>Standard <span>
@@ -35,13 +35,13 @@
                     <p>
                         *Per photo pricing is also available upon request
                     </p>
-                    <a href="javascript:;" class="btn yellow-crusta">
+                    <a href="javascript:;" class="btn btn-primary">
 					Sign Up
 					</a>
                 </div>
             </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-5">
             <div class="pricing hover-effect">
                 <div class="pricing-head">
                     <h3>Deluxe <span>
@@ -76,7 +76,7 @@
                     <p>
                         *Green Screen requires slightly more setup space
                     </p>
-                    <a href="javascript:;" class="btn yellow-crusta">
+                    <a href="javascript:;" class="btn btn-primary">
 					Sign Up
 					</a>
                 </div>
