--- a/home/home.html
+++ b/home/home.html
@@ -1,71 +1,201 @@
-<div class="container">
-    <div class="row">
-        <div class="col-md-8 col-md-offset-2">
-            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-                <!-- Indicators -->
-                <ol class="carousel-indicators">
-                    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-                </ol>
+<!--<div class="container">-->
+    <!--<div class="row">-->
+        <!--<div class="col-md-8 col-md-offset-2">-->
+            <!--<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">-->
+                <!--&lt;!&ndash; Indicators &ndash;&gt;-->
+                <!--<ol class="carousel-indicators">-->
+                    <!--<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>-->
+                    <!--<li data-target="#carousel-example-generic" data-slide-to="1"></li>-->
+                    <!--<li data-target="#carousel-example-generic" data-slide-to="2"></li>-->
+                <!--</ol>-->
 
-                <!-- Wrapper for slides -->
-                <div class="carousel-inner" role="listbox">
-                    <div class="item active">
-                        <img class="image-responsive" src="../photos/IMG_2224.JPG" alt="...">
-                        <div class="carousel-caption">
-                            This is an example of a caption.
-                        </div>
-                    </div>
-                    <div class="item">
-                        <img class="image-responsive" src="../photos/IMG_2972.PNG" alt="...">
-                        <div class="carousel-caption">
-                            ...
-                        </div>
-                    </div>
-                    ...
-                </div>
+                <!--&lt;!&ndash; Wrapper for slides &ndash;&gt;-->
+                <!--<div class="carousel-inner" role="listbox">-->
+                    <!--<div class="item active">-->
+                        <!--<img class="image-responsive" src="../photos/IMG_2224.JPG" alt="...">-->
+                        <!--<div class="carousel-caption">-->
+                            <!--This is an example of a caption.-->
+                        <!--</div>-->
+                    <!--</div>-->
+                    <!--<div class="item">-->
+                        <!--<img class="image-responsive" src="../photos/IMG_2972.PNG" alt="...">-->
+                        <!--<div class="carousel-caption">-->
+                            <!--...-->
+                        <!--</div>-->
+                    <!--</div>-->
+                    <!--...-->
+                <!--</div>-->
 
-                <!-- Controls -->
-                <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-                    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
-            </div>
+                <!--&lt;!&ndash; Controls &ndash;&gt;-->
+                <!--<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">-->
+                    <!--<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>-->
+                    <!--<span class="sr-only">Previous</span>-->
+                <!--</a>-->
+                <!--<a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">-->
+                    <!--<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>-->
+                    <!--<span class="sr-only">Next</span>-->
+                <!--</a>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
+<!--</div>-->
+<!--<h2>Services</h2>-->
+<!--<ul>-->
+    <!--<li>Professioal quality photos</li>-->
+    <!--<li>Simple & efficient setup and breakdown</li>-->
+    <!--<li>Printed 6x4 copy</li>-->
+    <!--<li>Digital copy included</li>-->
+    <!--<li>Social media abilities</li>-->
+    <!--<li>Certified attendant</li>-->
+    <!--<li>Customized templates</li>-->
+    <!--<li>Personalized backgrounds</li>-->
+    <!--<li>Add your own logo</li>-->
+    <!--<li>Green screen</li>-->
+    <!--<li>Customizable GIF's</li>-->
+    <!--<li>Professional lighting</li>-->
+    <!--<li>Tons of playful props</li>-->
+<!--</ul>-->
+<!--<h3>Contact Us</h3>-->
+<!--<ul>-->
+    <!--<li>Phone: 443.371.1815</li>-->
+    <!--<li>Email: marysselfiestation@gmail.com</li>-->
+    <!--<li>Facebook:-->
+        <!--<a href="https://www.facebook.com/MPCRSelfie/">MPCR Selfie</a>-->
+    <!--</li>-->
+    <!--<li>Instagram:-->
+        <!--<a href="https://www.instagram.com/mpcrselfie/">@MPCRSelfie</a>-->
+    <!--</li>-->
+<!--</ul>-->
+
+
+
+<!-- Full Page Image Background Carousel Header -->
+<header id="myCarousel" class="carousel slide">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active">
+            <div class="fill" id="item1"></div>
+        </li>
+        <li data-target="#myCarousel" data-slide-to="1">
+            <div class="fill" id="item2"></div>
+        </li>
+        <li data-target="#myCarousel" data-slide-to="2">
+            <div class="fill" id="item3"></div>
+        </li>
+    </ol>
+rd
+    <!-- Wrapper for Slides -->
+    <div class="carousel-inner">
+        <div class="item active">
+            <div class="fill" id="image1"></div>
+        </div>
+        <div class="item">
+            <div class="fill" id="image2"></div>
+        </div>
+        <div class="item">
+            <div class="fill" id="image3"></div>
         </div>
     </div>
-</div>
-<h2>Services</h2>
-<ul>
-    <li>Professioal quality photos</li>
-    <li>Simple & efficient setup and breakdown</li>
-    <li>Printed 6x4 copy</li>
-    <li>Digital copy included</li>
-    <li>Social media abilities</li>
-    <li>Certified attendant</li>
-    <li>Customized templates</li>
-    <li>Personalized backgrounds</li>
-    <li>Add your own logo</li>
-    <li>Green screen</li>
-    <li>Customizable GIF's</li>
-    <li>Professional lighting</li>
-    <li>Tons of playful props</li>
-</ul>
-<h3>Contact Us</h3>
-<ul>
-    <li>Phone: 443.371.1815</li>
-    <li>Email: marysselfiestation@gmail.com</li>
-    <li>Facebook:
-        <a href="https://www.facebook.com/MPCRSelfie/">MPCR Selfie</a>
-    </li>
-    <li>Instagram:
-        <a href="https://www.instagram.com/mpcrselfie/">@MPCRSelfie</a>
-    </li>
-</ul>
+
+</header>
+<!--<div class="jain_container">-->
+
+<!--<div class="banner_home">-->
+
+    <!--<div id="myCarousel" class="carousel slide" data-ride="carousel">-->
+        <!--&lt;!&ndash; Indicators &ndash;&gt;-->
+        <!--<ol class="carousel-indicators">-->
+            <!--<li data-target="#myCarousel" data-slide-to="0" class="active"></li>-->
+            <!--<li data-target="#myCarousel" data-slide-to="1"></li>-->
+            <!--<li data-target="#myCarousel" data-slide-to="2"></li>-->
+            <!--&lt;!&ndash;    <li data-target="#myCarousel" data-slide-to="3"></li> &ndash;&gt;-->
+        <!--</ol>-->
+
+        <!--&lt;!&ndash; Wrapper for slides &ndash;&gt;-->
+        <!--<div class="carousel-inner" role="listbox">-->
+            <!--<div class="item active">-->
+
+
+
+                <!--<img class="img-responsive" src="photos/IMG_2224.JPG" alt="pride Hotel banner"/>-->
+                <!--<div class="carousel-caption">-->
+                    <!--<div class="tagline">-->
+                        <!--<h3>never just stay-->
+
+                            <!--<hr/>-->
+                            <!--<span>stay inspired </span>-->
+                        <!--</h3>-->
+                        <!--<div class="new_years">-->
+                            <!--<div class="new_years_inner">-->
+                                <!--<h4> New Year Offer</h4>-->
+                                <!--<a href="">  Grab it now >></a>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
+
+
+            <!--</div>-->
+
+            <!--<div class="item">-->
+                <!--<img class="img-responsive" src="photos/IMG_2972.PNG" alt="pride Hotel banner"/>-->
+                <!--<div class="carousel-caption">-->
+                    <!--<div class="tagline">-->
+                        <!--<h3>never just stay-->
+
+                            <!--<hr/>-->
+                            <!--<span>stay inspired </span>-->
+                        <!--</h3>-->
+                        <!--<div class="new_years">-->
+                            <!--<div class="new_years_inner">-->
+                                <!--<h4> New Year Offer</h4>-->
+                                <!--<a href="">  Grab it now >></a>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
+
+
+            <!--</div>-->
+
+            <!--<div class="item">-->
+                <!--<img src="http://mogulsdemo.com/html/pride-home/images/banner/1&#45;&#45;&#45;&#45;&#45;&#45;.png" alt="pride Hotel banner"/>-->
+                <!--<div class="carousel-caption">-->
+                    <!--<div class="tagline">-->
+                        <!--<h3>never just stay-->
+
+                            <!--<hr/>-->
+                            <!--<span>stay inspired </span>-->
+                        <!--</h3>-->
+                        <!--<div class="new_years">-->
+                            <!--<div class="new_years_inner">-->
+                                <!--<h4> New Year Offer</h4>-->
+                                <!--<a href="">  Grab it now >></a>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
+
+
+        <!--</div>-->
+
+        <!--&lt;!&ndash; Left and right controls &ndash;&gt;-->
+        <!--<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">-->
+            <!--<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>-->
+            <!--<span class="sr-only">Previous</span>-->
+          <!--</a>-->
+          <!--<a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">-->
+            <!--<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>-->
+            <!--<span class="sr-only">Next</span>-->
+          <!--</a>-->
+    <!--</div>-->
+<!--</div>-->
+<!--</div>-->
+
+
+
+
 
 
 <div footer></div>
