--- a/contact/contact.html
+++ b/contact/contact.html
@@ -5,7 +5,7 @@
     </div>
     <div class="contact-section">
         <div class="container">
-            <form  action="https://formspree.io/snathaniel.dev@gmail.com"
+            <form  action="https://formspree.io/marysselfiestation@gmail.com"
                    method="POST">
                 <div class="col-xs-12 col-md-6 form-line">
                     <div class="form-group">
