made images responsive

--- a/navbar/navbar.html
+++ b/navbar/navbar.html
@@ -150,7 +150,7 @@
 
                 <div class="classus text-center">
 
-                    <p><i class="fa fa-phone" aria-hidden="true"></i> Call us 443.371.1815</p>
+                    <p class="phone"><i class="fa fa-phone" aria-hidden="true"></i> Call us: 443.371.1815</p>
 
                 </div>
 
