--- a/home/home.html
+++ b/home/home.html
@@ -70,7 +70,8 @@
 
 
 <!-- Full Page Image Background Carousel Header -->
-<header id="myCarousel" class="carousel slide">
+<!--<div class="banner-home">-->
+<header id="myCarousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active">
@@ -82,22 +83,96 @@
         <li data-target="#myCarousel" data-slide-to="2">
             <div class="fill" id="item3"></div>
         </li>
+        <li data-target="#myCarousel" data-slide-to="3">
+            <div class="fill" id="item4"></div>
+        </li>
+        <li data-target="#myCarousel" data-slide-to="4">
+            <div class="fill" id="item5"></div>
+        </li>
+        <li data-target="#myCarousel" data-slide-to="5">
+            <div class="fill" id="item6"></div>
+        </li>
     </ol>
 
     <!-- Wrapper for Slides -->
-    <div class="carousel-inner">
+    <div class="carousel-inner" role="listbox">
         <div class="item active">
-            <div class="fill" id="image1"></div>
+            <div class="fill" id="image1">
+                <img class="img-responsive" src="photos/IMG_2224.JPG">
+            </div>
         </div>
         <div class="item">
-            <div class="fill" id="image2"></div>
+            <div class="fill" id="image2">
+                <img class="img-responsive" src="photos/2017-5-19-75841.jpg">
+            </div>
         </div>
         <div class="item">
-            <div class="fill" id="image3"></div>
+            <div class="fill" id="image3">
+                <img class="img-responsive" src="photos/2017-4-2-70810.jpg">
+            </div>
+        </div>
+        <div class="item">
+            <div class="fill" id="image4">
+                <img class="img-responsive" src="photos/2017-5-19-71813.jpg">
+            </div>
+        </div>
+        <div class="item">
+            <div class="fill" id="image5">
+                <img class="img-responsive" src="photos/2017-5-19-72713.jpg">
+            </div>
+        </div>
+        <div class="item">
+            <div class="fill" id="image6">
+                <img class="img-responsive" src="photos/2017-5-19-76676.jpg">
+            </div>
         </div>
     </div>
 
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
+
 </header>
+
+<script>
+    $('.carousel').carousel({
+        interval: 3000
+    })
+</script>
+
+<!--<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">-->
+    <!--&lt;!&ndash; Indicators &ndash;&gt;-->
+    <!--<ol class="carousel-indicators">-->
+        <!--<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>-->
+        <!--<li data-target="#carousel-example-generic" data-slide-to="1"></li>-->
+        <!--<li data-target="#carousel-example-generic" data-slide-to="2"></li>-->
+    <!--</ol>-->
+
+    <!--&lt;!&ndash; Wrapper for slides &ndash;&gt;-->
+    <!--<div class="carousel-inner" role="listbox">-->
+        <!--<div class="item active">-->
+            <!--<img src="..." alt="...">-->
+            <!--<div class="carousel-caption">-->
+                <!--...-->
+            <!--</div>-->
+        <!--</div>-->
+        <!--<div class="item">-->
+            <!--<img src="..." alt="...">-->
+            <!--<div class="carousel-caption">-->
+                <!--...-->
+            <!--</div>-->
+        <!--</div>-->
+        <!--...-->
+    <!--</div>-->
+
+    <!-- Controls -->
+
+</div>
 <!--<div class="jain_container">-->
 
 <!--<div class="banner_home">-->
