--- a/footer/footer.html
+++ b/footer/footer.html
@@ -1,20 +1,30 @@
-<footer>
+<!--<footer>-->
     <hr>
-    <div class="row">
-        <div class="col-md-8 col-md-offset-2 footer">
-            <h6>contact info</h6>
-            <span id="phoneNumber">
-                <i class="fa fa-phone" aria-hidden="true"></i>
-                    Phone: 443.371.1815 |</span>
-            <span id="email">
-                <i class="fa fa-envelope" aria-hidden="true"></i>
-                    Email: marysselfiestation@gmail.com</span><br>
-            <span id="facebook">
-                <i class="fa fa-facebook-official" aria-hidden="true"></i>
-                    <a href="https://www.facebook.com/MPCRSelfie/">Facebook |</a></span>
-            <span id="instagram">
-                <i class="fa fa-instagram" aria-hidden="true"></i>
-                    <a href="https://www.instagram.com/mpcrselfie/">Instagram</a></span>
-        </div>
-    </div>
-</footer>
+    <!--<div class="row">-->
+        <!--<div class="col-md-8 col-md-offset-2 footer">-->
+            <!--<h6>contact info</h6>-->
+            <!--<span id="phoneNumber">-->
+                <!--<i class="fa fa-phone" aria-hidden="true"></i>-->
+                    <!--Phone: 443.371.1815 |</span>-->
+            <!--<span id="email">-->
+                <!--<i class="fa fa-envelope" aria-hidden="true"></i>-->
+                    <!--Email: marysselfiestation@gmail.com</span><br>-->
+            <!--<span id="facebook">-->
+                <!--<i class="fa fa-facebook-official" aria-hidden="true"></i>-->
+                    <!--<a href="https://www.facebook.com/MPCRSelfie/">Facebook |</a></span>-->
+            <!--<span id="instagram">-->
+                <!--<i class="fa fa-instagram" aria-hidden="true"></i>-->
+                    <!--<a href="https://www.instagram.com/mpcrselfie/">Instagram</a></span>-->
+        <!--</div>-->
+    <!--</div>-->
+<!--</footer>-->
+
+<div class="col-md-12 col-md-offset-5">
+    <ul class="social-network social-circle">
+        <li><a href="#" class="icoRss" title="Rss"><i class="fa fa-rss"></i></a></li>
+        <li><a href="#" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+        <li><a href="#" class="icoTwitter" title="Twitter"><i class="fa fa-twitter"></i></a></li>
+        <li><a href="#" class="icoGoogle" title="Google +"><i class="fa fa-google-plus"></i></a></li>
+        <li><a href="#" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
+    </ul>
+</div>
