--- a/navbar/navbar.html
+++ b/navbar/navbar.html
@@ -83,9 +83,9 @@
                             <!--</li>-->
 
 
-                            <li><a href="#/home">HOME</a></li><li>
-                            <a href="#/packages">PACKAGES</a></li><li>
-                            <a href="#/contact">CONTACT US</a></li>
+                            <li><a data-toggle="collapse" data-target=".navbar-collapse" href="#/home">HOME</a></li><li>
+                            <a data-toggle="collapse" data-target=".navbar-collapse" href="#/packages">PACKAGES</a></li><li>
+                            <a data-toggle="collapse" data-target=".navbar-collapse" href="#/contact">CONTACT US</a></li>
 
                             <!--<li><a href="#">LOYALTY</a></li>-->
                             <!--<li>-->
