--- a/navbar/navbar.html
+++ b/navbar/navbar.html
@@ -1,39 +1,14 @@
-<!--<div class="container-fluid">-->
-    <!--<nav class="navbar navbar-default">-->
-        <!--<div class="container-fluid">-->
-            <!--<div class="navbar-header">-->
-                <!--<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar5">-->
-                    <!--<span class="sr-only">Toggle navigation</span>-->
-                    <!--<span class="icon-bar"></span>-->
-                    <!--<span class="icon-bar"></span>-->
-                    <!--<span class="icon-bar"></span>-->
-                <!--</button>-->
-                <!--<a class="navbar-brand" href="#"><img style="width: 64px;" src="../brand/brand.PNG" alt="MPCR Selfie">MPCR SELFIE-->
-                <!--</a>-->
-            <!--</div>-->
-            <!--<div id="navbar5" class="navbar-collapse collapse">-->
-                <!--<ul class="nav navbar-nav navbar-right">-->
-                    <!--<li><a class="nav-link" href="#/home">Home<span id="divider">|</span></a></li>-->
-                    <!--<li><a class="nav-link" href="#/packages">Packages<span id="divider">|</span></a></li>-->
-                    <!--<li><a class="nav-link" href="#/contact">Contact Us</a></li>-->
-                <!--</ul>-->
-            <!--</div>-->
-            <!--&lt;!&ndash;/.nav-collapse &ndash;&gt;-->
-        <!--</div>-->
-        <!--&lt;!&ndash;/.container-fluid &ndash;&gt;-->
-    <!--</nav>-->
-
-
 <div class="jain_container">
 
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container1 container-fluid">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <button type="button" class="navbar-toggle" data-toggle="collapse"
+                        data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
                     <i class="icon-menu"></i> Menu
                 </button>
-                <a class="navbar-brand" href="#"> <img src="brand/brand.PNG" /></a>
+                <a class="navbar-brand" href="#"> <img src="brand/brand.PNG"/></a>
             </div>
 
 
@@ -43,128 +18,25 @@
 
                     <div class="col-md-12">
                         <ul class="nav navbar-nav">
-                            <!--<li class="dropdown mega-dropdown">-->
-                                <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown">FIND YORU HOTEL <span class="caret"></span></a>-->
-                                <!--<ul class="dropdown-menu mega-dropdown-menu">-->
-                                    <!--<li class="col-sm-4">-->
-                                        <!--<ul>-->
-                                            <!--<li class="dropdown-header">Features</li>-->
-                                            <!--<li><a href="#">Auto Carousel</a></li>-->
-                                            <!--<li><a href="#">Carousel Control</a></li>-->
-                                            <!--<li><a href="#">Left & Right Navigation</a></li>-->
-                                            <!--<li><a href="#">Four Columns Grid</a></li>-->
-                                            <!--&lt;!&ndash; <li class="divider"></li>-->
-                                            <!--<li class="dropdown-header">Fonts</li>-->
-                                            <!--<li><a href="#">Glyphicon</a></li>-->
-                                 <!---->
-                                       <!--<li><a href="#">Google Fonts</a></li> &ndash;&gt;-->
-                                        <!--</ul>-->
-                                    <!--</li>-->
-                                    <!--<li class="col-sm-4">-->
-                                        <!--<ul>-->
-                                            <!--<li class="dropdown-header">Plus</li>-->
-                                            <!--<li><a href="#">Navbar Inverse</a></li>-->
-                                            <!--<li><a href="#">Pull Right Elements</a></li>-->
-                                            <!--<li><a href="#">Coloured Headers</a></li>-->
-                                            <!--<li><a href="#">Primary Buttons & Default</a></li>-->
-                                        <!--</ul>-->
-                                    <!--</li>-->
-                                    <!--<li class="col-sm-4">-->
-                                        <!--<ul>-->
-                                            <!--<li class="dropdown-header">Much more</li>-->
-                                            <!--<li><a href="#">Easy to Customize</a></li>-->
-                                            <!--<li><a href="#">Calls to action</a></li>-->
-                                            <!--<li><a href="#">Custom Fonts</a></li>-->
-                                            <!--<li><a href="#">Slide down on Hover</a></li>-->
-                                        <!--</ul>-->
-                                    <!--</li>-->
-
-                                <!--</ul>-->
-                            <!--</li>-->
-
-
-                            <li><a data-toggle="collapse" data-target=".navbar-collapse" href="#/home">HOME</a></li><li>
-                            <a data-toggle="collapse" data-target=".navbar-collapse" href="#/packages">PACKAGES</a></li><li>
-                            <a data-toggle="collapse" data-target=".navbar-collapse" href="#/contact">CONTACT US</a></li>
-
-                            <!--<li><a href="#">LOYALTY</a></li>-->
-                            <!--<li>-->
-                                <!--<a href="#">CONTACT US</a>-->
-                            <!--</li>-->
-
+                            <li><a data-toggle="collapse" data-target=".navbar-collapse" href="#/home">HOME</a></li>
+                            <li>
+                                <a data-toggle="collapse" data-target=".navbar-collapse" href="#/packages">PACKAGES</a>
+                            </li>
+                            <li>
+                                <a data-toggle="collapse" data-target=".navbar-collapse" href="#/contact">CONTACT US</a>
+                            </li>
                         </ul>
                     </div>
-                    <!--<div class="col-md-12">-->
-                        <!--<form class="form-horizontal form-horizontal_x">-->
-                            <!--<div class="col-md-12">-->
-                                <!--<div class="form-group">-->
-
-                                    <!--<div class="col-sm-4">-->
-                                        <!--<select  name="hotel" id="hotel" required="" class="form-control" onchange="changeFormaction2(this.value);">-->
-                                            <!--<option value="" selected="">Select Hotel</option>-->
-                                            <!--<option value="67961">Pride Plaza Hotel Ahmedabad</option>-->
-                                            <!--<option value="67964">The Pride Hotel Bengaluru</option>-->
-                                            <!--<option value="29191">The Pride Hotel Nagpur</option>-->
-                                            <!--<option value="67963">The Pride Hotel Chennai</option>-->
-                                            <!--<option value="29190">The Pride Hotel, Pune</option>-->
-                                            <!--<option value="67962">Pride Plaza Hotel Kolkata</option>-->
-                                            <!--<option value="67580">Pride Plaza Hotel Delhi</option>-->
-                                            <!--<option value="8">Pride Amber Vilas Jaipur</option>-->
-                                            <!--<option value="65728">Pride Surya Mountain Resort Mcleodganj</option>-->
-                                            <!--<option value="60533">Pride Sun Village Resort SPA,Goa</option>-->
-                                            <!--<option value="138227">The Pride Biznotel,Vadodara</option>-->
-                                        <!--</select>-->
-
-                                        <!--&lt;!&ndash; <input type="text" class="form-control" id="email" placeholder="Enter email"> &ndash;&gt;-->
-                                    <!--</div>-->
-
-                                    <!--<div class="col-sm-3">-->
-                                        <!--<input type="text" class="form-control" id="pwd" placeholder="Check In">-->
-                                    <!--</div>-->
-
-                                    <!--<div class="col-sm-3">-->
-                                        <!--<input type="text" class="form-control" id="pwd" placeholder="Check Out">-->
-                                    <!--</div>-->
-
-                                    <!--<div class="col-sm-2">-->
-                                        <!--<button type="submit" class="btn btn-default">Book Now</button>-->
-                                    <!--</div>-->
-                                <!--</div>-->
-                            <!--</div>-->
-
-                        <!--</form>-->
-                    <!--</div>-->
-
                 </div>
             </div>
 
             <div class="col-md-2 medias">
-
-                <ul class="text-center">
-                    <li> <a href="https://www.facebook.com/MPCRSelfie/"> <i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                    <li> <a href="https://www.instagram.com/mpcrselfie/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                    <li> <a href="#/contact"> <i class="fa fa-envelope" aria-hidden="true"></i></a></li>
-                    <!--<li> <a href=""> <i class="fa fa-pinterest-p" aria-hidden="true"></i></a></li>-->
-
-                </ul>
-
-                <div class="classus text-center">
-
-                    <p class="phone"><i class="fa fa-phone" aria-hidden="true"></i> Call us: 443.371.1815</p>
-
-                </div>
-
-                <!--<div class="why_bookonline">-->
-                    <!--<p> Book your customized photo experience!</p>-->
-
-                <!--</div>-->
-
+                    <ul class=" text-center social-network social-circle">
+                        <li><a href="#/contact" class="icoRss" title="Email"><i class="fa fa-envelope"></i></a></li>
+                        <li><a href="https://www.facebook.com/MPCRSelfie/" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="https://www.instagram.com/mpcrselfie/" class="icoTwitter" title="Instagram"><i class="fa fa-instagram"></i></a></li>
+                    </ul>
             </div>
-
-
         </div>
-
     </nav>
-
-
 </div>
