--- a/home/home.html
+++ b/home/home.html
@@ -1,78 +1,16 @@
-<!--<div class="container">-->
-    <!--<div class="row">-->
-        <!--<div class="col-md-8 col-md-offset-2">-->
-            <!--<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">-->
-                <!--&lt;!&ndash; Indicators &ndash;&gt;-->
-                <!--<ol class="carousel-indicators">-->
-                    <!--<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>-->
-                    <!--<li data-target="#carousel-example-generic" data-slide-to="1"></li>-->
-                    <!--<li data-target="#carousel-example-generic" data-slide-to="2"></li>-->
-                <!--</ol>-->
-
-                <!--&lt;!&ndash; Wrapper for slides &ndash;&gt;-->
-                <!--<div class="carousel-inner" role="listbox">-->
-                    <!--<div class="item active">-->
-                        <!--<img class="image-responsive" src="../photos/IMG_2224.JPG" alt="...">-->
-                        <!--<div class="carousel-caption">-->
-                            <!--This is an example of a caption.-->
-                        <!--</div>-->
-                    <!--</div>-->
-                    <!--<div class="item">-->
-                        <!--<img class="image-responsive" src="../photos/IMG_2972.PNG" alt="...">-->
-                        <!--<div class="carousel-caption">-->
-                            <!--...-->
-                        <!--</div>-->
-                    <!--</div>-->
-                    <!--...-->
-                <!--</div>-->
-
-                <!--&lt;!&ndash; Controls &ndash;&gt;-->
-                <!--<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">-->
-                    <!--<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>-->
-                    <!--<span class="sr-only">Previous</span>-->
-                <!--</a>-->
-                <!--<a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">-->
-                    <!--<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>-->
-                    <!--<span class="sr-only">Next</span>-->
-                <!--</a>-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</div>-->
-<!--</div>-->
-<!--<h2>Services</h2>-->
-<!--<ul>-->
-    <!--<li>Professioal quality photos</li>-->
-    <!--<li>Simple & efficient setup and breakdown</li>-->
-    <!--<li>Printed 6x4 copy</li>-->
-    <!--<li>Digital copy included</li>-->
-    <!--<li>Social media abilities</li>-->
-    <!--<li>Certified attendant</li>-->
-    <!--<li>Customized templates</li>-->
-    <!--<li>Personalized backgrounds</li>-->
-    <!--<li>Add your own logo</li>-->
-    <!--<li>Green screen</li>-->
-    <!--<li>Customizable GIF's</li>-->
-    <!--<li>Professional lighting</li>-->
-    <!--<li>Tons of playful props</li>-->
-<!--</ul>-->
-<!--<h3>Contact Us</h3>-->
-<!--<ul>-->
-    <!--<li>Phone: 443.371.1815</li>-->
-    <!--<li>Email: marysselfiestation@gmail.com</li>-->
-    <!--<li>Facebook:-->
-        <!--<a href="https://www.facebook.com/MPCRSelfie/">MPCR Selfie</a>-->
-    <!--</li>-->
-    <!--<li>Instagram:-->
-        <!--<a href="https://www.instagram.com/mpcrselfie/">@MPCRSelfie</a>-->
-    <!--</li>-->
-<!--</ul>-->
-
-
 
 <!-- Full Page Image Background Carousel Header -->
 <!--<div class="banner-home">-->
 <header id="myCarousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
+    <div class="class row">
+        <div class="class col-md-10 col-md-offset-2">
+            <h1 id="title">Mary's Prop Crop & Roll Selfie Station</h1>
+            <h4 id="subtitle">Professional Photobooth Services</h4>
+        </div>
+    </div>
+    <!--<h1 id="title">Mary's Prop Crop & Roll Selfie Station</h1>-->
+    <!--<h4 id="subtitle">Professional Photobooth Services</h4>-->
     <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active">
             <div class="fill" id="item1"></div>
@@ -99,6 +37,7 @@
         <div class="item active">
             <div class="fill" id="image1">
             </div>
+
         </div>
         <div class="item">
             <div class="fill" id="image2">
@@ -135,7 +74,7 @@
 
 <script>
     $('.carousel').carousel({
-        interval: 3000
+        interval: 2000
     })
 </script>
 
@@ -166,7 +105,7 @@
 
     <!-- Controls -->
 
-</div>
+
 <!--<div class="jain_container">-->
 
 <!--<div class="banner_home">-->
