fixed responsive images

--- a/packages/packages.html
+++ b/packages/packages.html
@@ -35,7 +35,7 @@
                     <p>
                         *Per photo pricing is also available upon request
                     </p>
-                    <a href="javascript:;" class="btn btn-primary">
+                    <a href="#/contact" class="btn btn-primary">
 					Sign Up
 					</a>
                 </div>
@@ -76,7 +76,7 @@
                     <p>
                         *Green Screen requires slightly more setup space
                     </p>
-                    <a href="javascript:;" class="btn btn-primary">
+                    <a href="#/contact" class="btn btn-primary">
 					Sign Up
 					</a>
                 </div>
