--- a/home/home.html
+++ b/home/home.html
@@ -4,7 +4,7 @@
 <header id="myCarousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
     <div class="class row">
-        <div class="class col-md-10 col-md-offset-2">
+        <div class="class col-xs-12 col-md-10 col-md-offset-2">
             <h1 id="title">Mary's Prop Crop & Roll Selfie Station</h1>
             <h4 id="subtitle">Professional Photobooth Services</h4>
         </div>
@@ -61,14 +61,14 @@
         </div>
     </div>
 
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
+    <!--<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">-->
+        <!--<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>-->
+        <!--<span class="sr-only">Previous</span>-->
+    <!--</a>-->
+    <!--<a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">-->
+        <!--<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>-->
+        <!--<span class="sr-only">Next</span>-->
+    <!--</a>-->
 
 </header>
 
