made email and phone links

--- a/footer/footer.html
+++ b/footer/footer.html
@@ -6,10 +6,10 @@
             <h5>contact info</h5>
             <span id="phoneNumber">
                 <i class="fa fa-phone" aria-hidden="true"></i>
-                    Phone: 443.371.1815 |</span>
+                    <a href="tel:443-371-1815">Call </a>|</span>
             <span id="email">
                 <i class="fa fa-envelope" aria-hidden="true"></i>
-                    Email: marysselfiestation@gmail.com</span><br>
+                <a href="mailTo:marysselfiesttion@gmail.com">Email</a></span><br>
             <span id="facebook">
                 <i class="fa fa-facebook-official" aria-hidden="true"></i>
                     <a href="https://www.facebook.com/MPCRSelfie/">Facebook |</a></span>
